# antigen-v5

./: Cargo.toml
crates/antigen-core/: Cargo.toml
crates/antigen-fs/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/sandbox/src/demos/: mod.rs
crates/sandbox/src/demos/phosphor/: assemblage.rs  blit.wgsl  components.rs  gradients.png.kra  hdr_decay.wgsl  hdr_line.wgsl  hdr_mesh.wgsl  hdr_raster.wgsl  mod.rs  systems.rs  tonemap.wgsl
crates/sandbox/src/demos/phosphor/maps/: lunatic_fringe.map
crates/sandbox/src/demos/phosphor/shaders/: hdr_decay.wgsl  hdr_line.wgsl  hdr_mesh.wgsl  tonemap.wgsl
crates/sandbox/src/demos/transform_integration/: components.rs  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/: mod.rs
crates/sandbox/src/demos/wgpu_examples/boids/: components.rs  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/bunnymark/: components.rs  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/conservative_raster/: components.rs  mod.rs  systems.rs  triangle_and_lines.wgsl  upscale.wgsl
crates/sandbox/src/demos/wgpu_examples/cube/: components.rs  mod.rs  shader.wgsl  systems.rs
crates/sandbox/src/demos/wgpu_examples/hello_triangle/: mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/mipmap/: components.rs  draw.wgsl  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/msaa_line/: components.rs  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/shadow/: components.rs  mod.rs  shader.wgsl  systems.rs
crates/sandbox/src/demos/wgpu_examples/skybox/: components.rs  mod.rs  systems.rs
crates/sandbox/src/demos/wgpu_examples/texture_arrays/: components.rs  mod.rs  systems.rs
src/: main.rs
(+57 files in other folders)
